err/metanl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyStemmer-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/ftfy'...
Listing './lib/python3.5/site-packages/ftfy/bad_codecs'...
Listing './lib/python3.5/site-packages/ftfy-5.2.0.egg-info'...
Listing './lib/python3.5/site-packages/metanl'...
Listing './lib/python3.5/site-packages/metanl/data'...
Listing './lib/python3.5/site-packages/metanl/data/freeling'...
Listing './lib/python3.5/site-packages/metanl/data/wordlists'...
Compiling './lib/python3.5/site-packages/metanl/english.py'...
***   File "./lib/python3.5/site-packages/metanl/english.py", line 271
    print normalize("this is a test")
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metanl/general.py'...
***   File "./lib/python3.5/site-packages/metanl/general.py", line 168
    CAMEL_RE = re.compile(ur"""
    ^( [A-Z]+                 # A string of all caps, such as an acronym
     | [^A-Z0-9 _]+[A-Z _]    # A single capital letter followed by lowercase
                              #   letters, or lowercase letters on their own
                              #   after a word break
     | [^A-Z0-9 _]*[0-9.]+    # A number, possibly followed by lowercase
                              #   letters
     | [ _]+                  # Extra word breaks (spaces or underscores)
     | [^A-Z0-9]*[^A-Z0-9_ ]+ # Miscellaneous symbols, possibly with lowercase
                              #   letters after them
     )
""", re.VERBOSE)
                               
                                                                        
                                                                             
                                                                            
                                                    
                                                                        
                                         
                                                                         
                                                                              
                                                    
      
  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metanl/leeds_corpus_reader.py'...
***   File "./lib/python3.5/site-packages/metanl/leeds_corpus_reader.py", line 23
    print "%s -> %s" % (token, stemmed)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metanl/test_unicode.py'...
***   File "./lib/python3.5/site-packages/metanl/test_unicode.py", line 22
    print phrase
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/metanl-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
